# ainexus-phoenix

./: .dockerignore  .env  .env.example  .env.production  .gitattributes  .gitignore  96_modules_list.txt  Dockerfile  Dockerfile.fixed  MISSION_BRIEFING.md  MODULE_MANIFEST.md  MODULE_MAPPING_45.md  MODULE_MAPPING_96.md  Procfile  README.md  README_RENDER.md  TRANSFORMATION_SUCCESS.md  activate_dashboards.py  actual_files.txt  adaptive_profit_engine.py  app.js  app.py  app_backup.py  architecture.md  build.js  build.sh  check_content_similarity.sh  check_dashboard.sh  check_deployment.py  check_real_96_modules.sh  create_block1_execution.sh  dashboard.html  dashboard_analysis_report.txt  deploy_adaptive_engine.sh  deploy_confidence.sh  deploy_mission.sh  deploy_profit_harvesting.sh  deploy_safe.sh  deploy_unified_start_engine.sh  deployment_config.json  (+65 more)
advanced_ai/: AdvancedOpportunityDetector.js  AdvancedOpportunityDetector.test.js  QuantumOptimizer.js  config.js
advanced_risk/: AdvancedRiskIntelligenceEngine.js  AdvancedRiskIntelligenceEngine.test.js  config.js
agents/: DecisionAgent.py  ExecutionAgent.py
ai/: co-pilot-orchestrator.py  predictive-analytics.py  risk-intelligence.py
ainexus-ai-engine/: docker-compose.yml  start-ainexus.sh
api/: backend_integration.py  package.json
app/: globals.css  layout.tsx  page.tsx
bots/: executor-bot.js  memory-pool.js  message-broker.js  scanner-bot.js  validator-bot.js
contracts/: ApexAccount.sol  ApexFlashLoan.sol  MEVShield.sol
core/: app.py  app_fix.py  app_production.py  health.py  production.py
src/: app.py  (+5 more)
(+422 files in other folders)
